fixes social icons alignment

--- a/wip/styles/main.less
+++ b/wip/styles/main.less
@@ -240,7 +240,7 @@
 }
 
 #whatsappButton{
-  // display: none;
+  display: none;
 }
 
 .whatsapp-share-button{
